--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,5 +7,13 @@ pipeline {
                 checkout scmGit(branches: [[name: '*/main']], extensions: [], userRemoteConfigs: [[url: 'https://github.com/Kubsoon98/pytest.git']])
             }
         }
+    stage('Build') {
+        agent {
+            image docker:'faucet/python3'
+        }
+            steps {
+                sh 'python3 ops.py'
+            }
+        }
     }
 }
