--- a/jenkinsfile
+++ b/jenkinsfile
@@ -10,7 +10,7 @@ pipeline {
     stage('Build') {
         agent{
                 docker {
-                    image 'python3'
+                    image 'faucet/python3'
                     reuseNode true
                 }
             }
