--- a/jenkinsfile
+++ b/jenkinsfile
@@ -20,7 +20,16 @@ pipeline {
         }
     stage('Test') {
             steps {
-                checkout scmGit(branches: [[name: '*/main']], extensions: [], userRemoteConfigs: [[url: 'https://github.com/Kubsoon98/pytest.git']]) // skonczylem na tescie 
+        agent{
+                docker {
+                    image 'faucet/python3'
+                    reuseNode true
+                }
+            }
+            steps {
+                sh 'python3 test_ops.py' 
+            }
+        }
             }
         }
     }
