--- a/jenkinsfile
+++ b/jenkinsfile
@@ -10,8 +10,8 @@ pipeline {
     stage('Build') {
             steps {
                 sh '''
-                    apt-get update
-                    apt-get install python3
+                    sudo apt-get update
+                    sudo apt-get install python3
                 '''
                 sh 'python3 ops.py' 
             }
