--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,12 +8,12 @@ pipeline {
             }
         }
     stage('Build') {
-        agent{
+        /*agent{
                 docker {
                     image 'faucet/python3'
                     reuseNode true
                 }
-            }
+            }*/
             steps {
                 sh 'ls -la'
                 sh 'python3 ops.py' 
