--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,12 +8,12 @@ pipeline {
             }
         }
     stage('Build') {
-        /*agent{
+        agent{
                 docker {
-                    image 'faucet/python3'
+                    image 'python:3.10.14-alpine3.20'
                     reuseNode true
                 }
-            }*/
+            }
             steps {
                 sh 'ls -la'
                 sh 'python3 ops.py' 
