--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,9 +1,6 @@
 pipeline {
-    agent {
-        docker {
-            image 'python:3.10.14-alpine3.20'
-                }
-    }
+    agent any
+
     stages {
         stage('Checkout') {
             steps {
@@ -11,6 +8,12 @@ pipeline {
             }
         }
     stage('Build') {
+        agent{
+                docker {
+                    image 'python:3.10.14-alpine3.20'
+                    reuseNode true
+                }
+            }
             steps {
                 sh 'ls -la'
                 sh 'python3 ops.py' 
@@ -18,6 +21,12 @@ pipeline {
         }
      
     stage('Test') {
+        agent{
+                docker {
+                    image 'python:3.10.14-alpine3.20'
+                    reuseNode true
+                }
+            }
             steps {
                 sh 'python3 test_ops.py' 
             }
